--- a/miniprogram/pages/manage/shop/index.wxml
+++ b/miniprogram/pages/manage/shop/index.wxml
@@ -1,8 +1,10 @@
 <!--pages/manage/shop/index.wxml-->
-<cu-custom bgColor="bg-white" isBack="{{false}}">
+<cu-custom bgColor="bg-white" isBack="{{true}}">
   <view slot="backText">返回</view>
-  <view slot="content">千人吃鸡</view>
+  <view slot="content">店铺管理</view>
 </cu-custom>
+<!-- 对话框 -->
+<dialog showDialogProps="{{showDialog}}" postDataProps="{{dialogData}}" bind:onOk="onDelete"> </dialog>
 <!-- 数据加载，显示loading态 -->
 <view class='cu-load load-modal' wx:if="{{isLoading}}">
   <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
@@ -10,28 +12,31 @@
 </view>
 <!-- 数据加载完毕 -->
 <block wx:if="{{ !isLoading }}">
-  <!-- 店铺 -->
-  <!-- <view class="cu-bar bg-white padding-lr" style="display: flex;align-items: center;width: 100vw;height: 90rpx;">
-    <picker style="flex: 1;height: 100%;text-align: center;" bindchange="bindPickerChange" value="{{index}}" range="{{shopList}}" range-key="name">
-      <view style="font-size: 12px;line-height: 90rpx;">
-        {{shopList[index].name}}
-      </view>
-    </picker>
-    <image style="width: 16px;" src="../../images/icons/choice.svg" mode="widthFix" />
-  </view> -->
-  <view class="cu-list menu margin-top-sm">
-    <view class="cu-item arrow">
-      店铺管理
+  <view class="cu-bar search bg-white">
+    <view class="search-form round">
+      <text class="cuIcon-search"></text>
+      <input type="text" placeholder="输入店名搜索" confirm-type="search"></input>
     </view>
-    <view class="cu-item arrow">
-      会员价格管理
-    </view>
-    <view class="cu-item arrow">
-      会员管理
-    </view>
-    <view class="cu-item arrow">
-      运营统计
+    <view class="action">
+      <text class="cuIcon-search">
+      </text>
     </view>
   </view>
-
+  <scroll-view>
+    <view class="cu-list menu margin-top-sm">
+      <view class="cu-item" wx:for="{{ shopList }}" wx:key="_id">
+        <view class="content">
+          {{item.name}}
+        </view>
+        <view class="action">
+          <button class="cu-btn bg-red shadow sm" style="width: 50rpx;border-radius: 50%;" bind:tap="deleteShop" data-shopid="{{item._id}}">
+            <!-- {{item._id}} -->
+            <text class="cuIcon-delete">
+            </text>
+          </button>
+        </view>
+      </view>
+    </view>
+  </scroll-view>
+  <button style="width: 80vw;margin-left: 10vw;position: fixed;bottom: 90rpx;" class="cu-btn bg-blue round">新增店铺</button>
 </block>
