--- a/miniprogram/pages/application/index.wxml
+++ b/miniprogram/pages/application/index.wxml
@@ -1,62 +1,44 @@
 <!--pages/application/index.wxml-->
 <cu-custom bgColor="bg-white" isBack="{{true}}">
-    <view slot="backText">返回</view>
-    <view slot="content">申请表</view>
+  <view slot="backText">返回</view>
+  <view slot="content">申请表</view>
 </cu-custom>
 <form catchsubmit="formSubmit" catchreset="formReset">
-    <view class="cu-form-group margin-top">
-        <view class="title">ID</view>
-        <input name="_openid" disabled="true" value="{{_openid}}"></input>
-    </view>
+  <view class="cu-form-group margin-top">
+    <view class="title">ID</view>
+    <input name="_openid" disabled="true" value="{{_openid}}"></input>
+  </view>
 
-    <view class="cu-form-group">
-        <view class="title">手机号码</view>
-        <input name="phone" placeholder="请填写手机号..."></input>
-        <view class="cu-capsule radius">
-            <view class="cu-tag bg-blue">
-                +86
-            </view>
-            <view class="cu-tag line-blue">
-                中国大陆
-            </view>
-        </view>
+  <view class="cu-form-group">
+    <view class="title">手机号码</view>
+    <input name="phone" placeholder="请填写手机号..."></input>
+    <view class="cu-capsule radius">
+      <view class="cu-tag bg-blue">
+        +86
+      </view>
+      <view class="cu-tag line-blue">
+        中国大陆
+      </view>
     </view>
-    <view class="cu-form-group margin-top">
-        <view class="title">选择店铺</view>
-        <picker name="shopIndex" bindchange="PickerChange" value="{{index}}" range="{{shopList}}" range-key="name">
-            <view class="picker">
-                {{index?shopList[index].name:'请选择一家店铺...'}}
-            </view>
-        </picker>
-    </view>
+  </view>
+  <view class="cu-form-group margin-top">
+    <view class="title">选择店铺</view>
+    <picker name="shopIndex" bindchange="PickerChange" value="{{index}}" range="{{shopList}}" range-key="name">
+      <view class="picker">
+        {{shopList[index].name?shopList[index].name:'请选择一家店铺...'}}
+      </view>
+    </picker>
+  </view>
 
-    <view class="cu-bar bg-white margin-top">
-        <view class="action">
-            上传身份证正反面
-        </view>
-        <view class="action">
-            {{imgList.length}}/2
-        </view>
-    </view>
-    <view class="cu-form-group">
-        <view class="grid col-4 grid-square flex-sub">
-            <view class="bg-img" wx:for="{{imgList}}" wx:key="index" bindtap="ViewImage" data-url="{{imgList[index]}}">
-                <image src='{{imgList[index]}}' mode='aspectFill'></image>
-                <view class="cu-tag bg-red" catchtap="DelImg" data-index="{{index}}">
-                    <text class="cuIcon-close"></text>
-                </view>
-            </view>
-            <view class="solids" bindtap="ChooseImage" wx:if="{{imgList.length<2}}">
-                <text class="cuIcon-cameraadd"></text>
-            </view>
-        </view>
-    </view>
-    <view class="cu-form-group align-start">
-        <view class="title">备注</view>
-        <textarea name="remarks" maxlength="300"  bindinput="textareaBInput" placeholder="请输入备注..."></textarea>
-    </view>
-    <view class="flex padding" style="gap: 8px">
-        <button class="cu-btn round bg-blue" formType="submit">提交审核</button>
-        <button class="cu-btn round bg-black" formType="reset">重置</button>
-    </view>
+  <upLoadFile count="2" directory="application" label="请上传身份证正反面" bind:onUploadOk="onUploadOk">
+  </upLoadFile>
+
+  <view class="cu-form-group align-start">
+    <view class="title">备注</view>
+    <textarea name="remarks" maxlength="300" bindinput="textareaBInput" placeholder="请输入备注..."></textarea>
+  </view>
+  <view class="flex padding" style="gap: 8px">
+    <button class="cu-btn round bg-blue" formType="submit">提交审核</button>
+    <button class="cu-btn round bg-black" formType="reset">重置</button>
+  </view>
 </form>
