--- a/miniprogram/pages/manage/shop-edit/index.wxml
+++ b/miniprogram/pages/manage/shop-edit/index.wxml
@@ -15,28 +15,9 @@
         <text class="cuIcon-locationfill text-orange"></text>
     </view>
    
+    <upLoadFile count="2" directory="shop" label="请上店铺图片" bind:onUploadOk="onUploadOk">
+    </upLoadFile>
 
-    <view class="cu-bar bg-white margin-top">
-        <view class="action">
-            上传店铺图片
-        </view>
-        <view class="action">
-            {{imgList.length}}/2
-        </view>
-    </view>
-    <view class="cu-form-group">
-        <view class="grid col-4 grid-square flex-sub">
-            <view class="bg-img" wx:for="{{imgList}}" wx:key="index" bindtap="ViewImage" data-url="{{imgList[index]}}">
-                <image src='{{imgList[index]}}' mode='aspectFill'></image>
-                <view class="cu-tag bg-red" catchtap="DelImg" data-index="{{index}}">
-                    <text class="cuIcon-close"></text>
-                </view>
-            </view>
-            <view class="solids" bindtap="ChooseImage" wx:if="{{imgList.length<2}}">
-                <text class="cuIcon-cameraadd"></text>
-            </view>
-        </view>
-    </view>
     <view class="cu-form-group align-start">
         <view class="title">备注</view>
         <textarea name="remarks" maxlength="300"  bindinput="textareaBInput" placeholder="请输入备注..."></textarea>
