--- a/miniprogram/pages/home/index.wxss
+++ b/miniprogram/pages/home/index.wxss
@@ -44,13 +44,15 @@
 }
 
 .order-image {
-    width: 24px;
+    width: 210rpx;
+    height: 90rpx;
+    border-radius: 9rpx;
 }
 
 .order-list {
     font-size: 28rpx;
     padding: 0 30rpx;
-    bottom: 9rpx;
+    bottom: 150rpx;
     align-items: center;
     background-color: #dadadac0;
     border: 1px solid #dadadac0;
@@ -86,6 +88,7 @@
 
 .goods-image {
     width: 100%;
+    height: 280rpx;
 }
 
 .goods-title {
