--- a/miniprogram/pages/manage/dishes-edit/index.wxml
+++ b/miniprogram/pages/manage/dishes-edit/index.wxml
@@ -1,56 +1,37 @@
 <!--pages/manage/dishes-edit/index.wxml-->
 <cu-custom bgColor="bg-white" isBack="{{true}}">
-    <view slot="backText">返回</view>
-    <view slot="content">新增商品</view>
+  <view slot="backText">返回</view>
+  <view slot="content">新增商品</view>
 </cu-custom>
 <form catchsubmit="formSubmit" catchreset="formReset">
-    <view class="cu-form-group margin-top">
-        <view class="title">所属店铺</view>
-        <input value="{{shop.name}}"></input>
-    </view>
-    <view class="cu-form-group margin-top">
-        <view class="title">商品名称</view>
-        <input name="title" placeholder="请输入..."></input>
-    </view>
+  <view class="cu-form-group margin-top">
+    <view class="title">所属店铺</view>
+    <input value="{{shop.name}}" disabled></input>
+  </view>
+  <view class="cu-form-group margin-top">
+    <view class="title">商品名称</view>
+    <input name="title" placeholder="请输入..." value="{{goods.title}}"></input>
+  </view>
 
-    <view class="cu-form-group" bind:tap="openMap">
-        <view class="title">原价</view>
-        <input name="price" type="number" placeholder="请输入..."></input>
-        <text class="text-orange">单位分</text>
-    </view>
-    <view class="cu-form-group" bind:tap="openMap">
-        <view class="title">会员原价</view>
-        <input name="vipPrice" type="number" placeholder="请输入..."></input>
-        <text class="text-orange">单位分</text>
-    </view>
+  <view class="cu-form-group" bind:tap="openMap">
+    <view class="title">原价</view>
+    <input name="price" type="number" value="{{goods.price}}" placeholder="请输入..."></input>
+    <text class="text-orange">单位分</text>
+  </view>
+  <view class="cu-form-group" bind:tap="openMap">
+    <view class="title">会员原价</view>
+    <input name="vipPrice" type="number" value="{{goods.vipPrice}}" placeholder="请输入..."></input>
+    <text class="text-orange">单位分</text>
+  </view>
 
-    <view class="cu-bar bg-white margin-top">
-        <view class="action">
-            上传商品图片
-        </view>
-        <view class="action">
-            {{imgList.length}}/1
-        </view>
-    </view>
-    <view class="cu-form-group">
-        <view class="grid col-4 grid-square flex-sub">
-            <view class="bg-img" wx:for="{{imgList}}" wx:key="index" bindtap="ViewImage" data-url="{{imgList[index]}}">
-                <image src='{{imgList[index]}}' mode='aspectFill'></image>
-                <view class="cu-tag bg-red" catchtap="DelImg" data-index="{{index}}">
-                    <text class="cuIcon-close"></text>
-                </view>
-            </view>
-            <view class="solids" bindtap="ChooseImage" wx:if="{{imgList.length<1}}">
-                <text class="cuIcon-cameraadd"></text>
-            </view>
-        </view>
-    </view>
-    <view class="cu-form-group align-start">
-        <view class="title">备注</view>
-        <textarea name="remarks" maxlength="300" bindinput="textareaBInput" placeholder="请输入备注..."></textarea>
-    </view>
-    <view class="flex padding" style="gap: 8px">
-        <button class="cu-btn round bg-blue" formType="submit">提交</button>
-        <button class="cu-btn round bg-black" formType="reset">重置</button>
-    </view>
+  <upLoadFile count="1" directory="goods" label="请上商品图片" imgs="{{goods.img?[goods.img]:[]}}" bind:onUploadOk="onUploadOk"></upLoadFile>
+
+  <view class="cu-form-group align-start">
+    <view class="title">备注</view>
+    <textarea name="remarks" maxlength="300" bindinput="textareaBInput" value="{{goods.remarks}}" placeholder="请输入备注..."></textarea>
+  </view>
+  <view class="flex padding" style="gap: 8px">
+    <button class="cu-btn round bg-blue" formType="submit">提交</button>
+    <button class="cu-btn round bg-black" formType="reset">重置</button>
+  </view>
 </form>
