--- a/miniprogram/pages/manage/shop-edit/index.wxml
+++ b/miniprogram/pages/manage/shop-edit/index.wxml
@@ -1,12 +1,12 @@
 <!--pages/manage/shop-edit/index.wxml-->
 <cu-custom bgColor="bg-white" isBack="{{true}}">
-  <view slot="backText">返回</view>
-  <view slot="content">新增店铺</view>
+    <view slot="backText">返回</view>
+    <view slot="content">新增店铺</view>
 </cu-custom>
 <form catchsubmit="formSubmit" catchreset="formReset">
     <view class="cu-form-group margin-top">
         <view class="title">店铺名称</view>
-        <input name="name" placeholder="请输入..."></input>
+        <input name="name" value="{{shop.name}}" placeholder="请输入..."></input>
     </view>
 
     <view class="cu-form-group" bind:tap="openMap">
@@ -14,13 +14,13 @@
         <input name="location" placeholder="请填点开地图选择..." value="{{location}}" disabled></input>
         <text class="cuIcon-locationfill text-orange"></text>
     </view>
-   
-    <upLoadFile count="2" directory="shop" label="请上店铺图片" bind:onUploadOk="onUploadOk">
+
+    <upLoadFile count="2" directory="shop" imgs="{{shop.imgs?shop.imgs:[]}}" label="请上店铺图片" bind:onUploadOk="onUploadOk">
     </upLoadFile>
 
     <view class="cu-form-group align-start">
         <view class="title">备注</view>
-        <textarea name="remarks" maxlength="300"  bindinput="textareaBInput" placeholder="请输入备注..."></textarea>
+        <textarea name="remarks" value="{{shop.remarks}}" maxlength="300" placeholder="请输入备注..."></textarea>
     </view>
     <view class="flex padding" style="gap: 8px">
         <button class="cu-btn round bg-blue" formType="submit">提交审核</button>
