--- a/miniprogram/pages/home/index.wxml
+++ b/miniprogram/pages/home/index.wxml
@@ -10,17 +10,12 @@
   <view class='gray-text text-xs'>加载中...</view>
 </view>
 
+ <!-- 店铺 -->
+ <shopBar bind:onShopChange="onShopChange"></shopBar>
+ 
 <!-- 数据加载完毕 -->
 <block wx:if="{{ !isLoading }}">
-  <!-- 店铺 -->
-  <view class="cu-bar bg-white padding-lr" style="display: flex;align-items: center;width: 100vw;height: 90rpx;">
-    <picker style="flex: 1;height: 100%;text-align: center;" bindchange="bindPickerChange" value="{{index}}" range="{{shopList}}" range-key="name">
-      <view style="font-size: 12px;line-height: 90rpx;">
-        {{shopList[index].name}}
-      </view>
-    </picker>
-    <image style="width: 16px;" src="../../images/icons/more.png" mode="widthFix" />
-  </view>
+ 
   <!-- 有数据 -->
   <view wx:if="{{ goodsList.length >= 1 }}">
     <!-- 底部结算 -->
