--- a/miniprogram/pages/manage/dishes/index.wxml
+++ b/miniprogram/pages/manage/dishes/index.wxml
@@ -10,18 +10,10 @@
     <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
     <view class='gray-text text-xs'>加载中...</view>
 </view>
+<!-- 店铺 -->
+<shopBar bind:onShopChange="onShopChange"></shopBar>
 <!-- 数据加载完毕 -->
 <block wx:if="{{ !isLoading }}">
-    <!-- 店铺 -->
-    <view class="cu-bar bg-white padding-lr" style="display: flex;align-items: center;width: 100vw;height: 90rpx;">
-        <picker style="flex: 1;height: 100%;text-align: center;" bindchange="bindPickerChange" value="{{index}}" range="{{shopList}}" range-key="name">
-            <view style="font-size: 12px;line-height: 90rpx;">
-                {{shopList[index].name}}
-            </view>
-        </picker>
-        <image style="width: 16px;" src="../../../images/icons/choice.svg" mode="widthFix" />
-    </view>
-
     <!-- <view class="cu-bar search bg-white">
     <view class="search-form round">
       <text class="cuIcon-search"></text>
