--- a/miniprogram/pages/user-center/index.wxml
+++ b/miniprogram/pages/user-center/index.wxml
@@ -3,118 +3,112 @@
     <view slot="backText">返回</view>
     <view slot="content">我</view>
 </cu-custom>
-<view>
-    <view class='cu-load load-modal' wx:if="{{isLoading}}">
-        <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
-        <view class='gray-text text-xs'>加载中...</view>
-    </view>
-    <!-- 店铺 -->
-    <view class="cu-bar bg-white padding-lr" style="display: flex;align-items: center;width: 100vw;height: 90rpx;">
-        <picker style="flex: 1;height: 100%;text-align: center;" bindchange="bindPickerChange" value="{{index}}" range="{{shopList}}" range-key="name">
-            <view style="font-size: 12px;line-height: 90rpx;">
-                {{shopList[index].name}}
-            </view>
-        </picker>
-        <image style="width: 16px;" src="../../images/icons/more.png" mode="widthFix" />
-    </view>
-    <view class="main_content" style="height: {{containerHeight - 120}}rpx;">
-        <view class=" userinfo_container">
-            <view class='mytop-box '>
-                <view style="width: 160rpx;position: relative;">
-                    <image wx:if="{{vipUserInfo}}" style="width: 60rpx;right: 10rpx;position: absolute;transform: rotate(45deg);" src="../../images/icons/vip.svg" mode="widthFix"></image>
-                    <view class="mytop-avatar">
-                        <open-data type="userAvatarUrl"></open-data>
-                    </view>
-                </view>
-                <view class='mytop-username'>
-                    <open-data type="userNickName"></open-data>
-                </view>
-            </view>
-            <view>{{vipUserInfo==null?'非会员':'会员'}}</view>
-        </view>
-        <!-- VIP -->
-        <block wx:if="{{!vipLoading}}">
-            <view class="vip_container">
-                <view class="vip_item">
-                    <view class="flex align-center" style="width: 100%;  border-radius: 9rpx;background-color:white;border: 1px solid #f1f1f1;height: 160rpx;" wx:if="{{vipUserInfo==null}}">
+<!-- 店铺 -->
+<shopBar bind:onShopChange="onShopChange"></shopBar>
 
-                        <button style="width: 120rpx;" class="cu-btn sm round bg-orange " bind:tap="toBeVip">加入会员</button>
-                    </view>
-                    <view class="padding" style="width: 100%;  border-radius: 9rpx;text-align: start;background-color:white;border: 1px solid #f1f1f1;" wx:else>
-                        <view class="flex align-center justify-between">
-                            LV1
-                            <view class="">
-                                可用余额：¥{{vipUserInfo.account.balance}}
-                            </view>
-                        </view>
-                        <view class="margin-top flex align-center">
-                            <view style="font-size: 40rpx;">
-                                {{vipUserInfo.account.points}}
-                            </view>
-                            <image wx:if="{{vipUserInfo}}" style="width: 30rpx;" src="../../images/icons/points.svg" mode="widthFix"></image>
+<view class='cu-load load-modal' wx:if="{{isLoading}}">
+    <!-- <image src='/images/logo.png' class='png' mode='aspectFit'></image> -->
+    <view class='gray-text text-xs'>加载中...</view>
+</view>
 
 
-                        </view>
-                        <view class="cu-progress round xs striped active">
-                            <view class="bg-purple" style="width:61.8%;"></view>
-                        </view>
-                    </view>
+<view class="main_content" style="height: {{containerHeight - 120}}rpx;">
+    <view class=" userinfo_container">
+        <view class='mytop-box '>
+            <view style="width: 160rpx;position: relative;">
+                <image wx:if="{{vipUserInfo}}" style="width: 60rpx;right: 10rpx;position: absolute;transform: rotate(45deg);" src="../../images/icons/vip.svg" mode="widthFix"></image>
+                <view class="mytop-avatar">
+                    <open-data type="userAvatarUrl"></open-data>
                 </view>
             </view>
-        </block>
-        <!-- SETTING -->
-        <view class="settings_container">
-            <view class="setting_item">
-                <view class="left">
-                    <image class="setting_icon" src="../../images/icons/setting.svg" />
-                    <view class="setting_text">个人信息设置</view>
-                </view>
-                <image class="arrow_icon" src="../../images/arrow.svg" />
-            </view>
-            <view class="setting_item">
-                <view class="left">
-                    <image class="setting_icon" src="../../images/icons/question.svg" />
-                    <view class="setting_text">常见问题</view>
-                </view>
-                <image class="arrow_icon" src="../../images/arrow.svg" />
-            </view>
-
-            <view class="setting_item" bind:tap="gotoApplicationPage">
-                <view class="left">
-                    <image class="setting_icon" src="../../images/icons/share.svg" />
-                    <view class="setting_text">申请成为店长</view>
-                </view>
-                <image class="arrow_icon" src="../../images/arrow.svg" />
-            </view>
-            <view class="setting_item" style=" border-bottom: 0rpx solid rgba(0, 0, 0, 0.08);">
-                <view class="left">
-                    <image class="setting_icon" src="../../images/icons/customer-service.svg" />
-                    <button open-type="contact" class="contact-button">
-                        联系客服
-                    </button>
-                </view>
-                <!-- <image class="arrow_icon" src="../../images/arrow.svg" /> -->
+            <view class='mytop-username'>
+                <open-data type="userNickName"></open-data>
             </view>
         </view>
+        <view>{{vipUserInfo==null?'非会员':'会员'}}</view>
     </view>
-    <!-- <cloud-tip-modal showUploadTipProps="{{showUploadTip}}" /> -->
-    <!-- 购买VIP -->
-    <view class="cu-modal bottom-modal {{showPayDialog?'show':''}}">
-        <view class="cu-dialog">
-            <view class="cu-bar bg-white">
-                <view class="action text-blue" bind:tap="payVip">支付</view>
-                <view class="action text-gray" bindtap="closePayDialog">取消</view>
-            </view>
-            <view class="">
-                <radio-group bindchange="radioChange">
-                    <view style="width: 100vw;" class="flex padding align-center " wx:for="{{vips}}" wx:key="value">
-                        <view class="margin-lr">
-                            <radio value="{{item.value}}" checked="true" />
+    <!-- VIP -->
+    <block wx:if="{{!vipLoading}}">
+        <view class="vip_container">
+            <view class="vip_item">
+                <view class="flex align-center" style="width: 100%;  border-radius: 9rpx;background-color:white;border: 1px solid #f1f1f1;height: 160rpx;" wx:if="{{vipUserInfo==null}}">
+
+                    <button style="width: 120rpx;" class="cu-btn sm round bg-orange " bind:tap="toBeVip">加入会员</button>
+                </view>
+                <view class="padding" style="width: 100%;  border-radius: 9rpx;text-align: start;background-color:white;border: 1px solid #f1f1f1;" wx:else>
+                    <view class="flex align-center justify-between">
+                        LV1
+                        <view class="">
+                            可用余额：¥{{vipUserInfo.account.balance}}
                         </view>
-                        <view>{{item.name}}</view>
                     </view>
-                </radio-group>
+                    <view class="margin-top flex align-center">
+                        <view style="font-size: 40rpx;">
+                            {{vipUserInfo.account.points}}
+                        </view>
+                        <image wx:if="{{vipUserInfo}}" style="width: 30rpx;" src="../../images/icons/points.svg" mode="widthFix"></image>
+
+
+                    </view>
+                    <view class="cu-progress round xs striped active">
+                        <view class="bg-purple" style="width:61.8%;"></view>
+                    </view>
+                </view>
             </view>
+        </view>
+    </block>
+    <!-- SETTING -->
+    <view class="settings_container">
+        <view class="setting_item">
+            <view class="left">
+                <image class="setting_icon" src="../../images/icons/setting.svg" />
+                <view class="setting_text">个人信息设置</view>
+            </view>
+            <image class="arrow_icon" src="../../images/arrow.svg" />
+        </view>
+        <view class="setting_item">
+            <view class="left">
+                <image class="setting_icon" src="../../images/icons/question.svg" />
+                <view class="setting_text">常见问题</view>
+            </view>
+            <image class="arrow_icon" src="../../images/arrow.svg" />
+        </view>
+
+        <view class="setting_item" bind:tap="gotoApplicationPage">
+            <view class="left">
+                <image class="setting_icon" src="../../images/icons/share.svg" />
+                <view class="setting_text">申请成为店长</view>
+            </view>
+            <image class="arrow_icon" src="../../images/arrow.svg" />
+        </view>
+        <view class="setting_item" style=" border-bottom: 0rpx solid rgba(0, 0, 0, 0.08);">
+            <view class="left">
+                <image class="setting_icon" src="../../images/icons/customer-service.svg" />
+                <button open-type="contact" class="contact-button">
+                    联系客服
+                </button>
+            </view>
+            <!-- <image class="arrow_icon" src="../../images/arrow.svg" /> -->
+        </view>
+    </view>
+</view>
+<!-- <cloud-tip-modal showUploadTipProps="{{showUploadTip}}" /> -->
+<!-- 购买VIP -->
+<view class="cu-modal bottom-modal {{showPayDialog?'show':''}}">
+    <view class="cu-dialog">
+        <view class="cu-bar bg-white">
+            <view class="action text-blue" bind:tap="payVip">支付</view>
+            <view class="action text-gray" bindtap="closePayDialog">取消</view>
+        </view>
+        <view class="">
+            <radio-group bindchange="radioChange">
+                <view style="width: 100vw;" class="flex padding align-center " wx:for="{{vips}}" wx:key="value">
+                    <view class="margin-lr">
+                        <radio value="{{item.value}}" checked="true" />
+                    </view>
+                    <view>{{item.name}}</view>
+                </view>
+            </radio-group>
         </view>
     </view>
 </view>
