--- a/miniprogram/pages/manage/index.wxml
+++ b/miniprogram/pages/manage/index.wxml
@@ -20,8 +20,8 @@
     <view class="cu-item arrow" bind:tap="goTopManageDishes">
       菜品管理
     </view>
-    <view class="cu-item arrow">
-      会员价格管理
+    <view class="cu-item arrow" bind:tap="goToVipEdit">
+      会员套餐管理
     </view>
     <view class="cu-item arrow">
       会员管理
